# learny

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  SKILLS.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  skills-lock.json
backend/: .dockerignore  .env.example  .env.production.example  .gitignore  Dockerfile  alembic.ini  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/application/: __init__.py  anchoring.py  cards.py  chunking.py  corpus.py  dates.py  errors.py  grounding.py  identity.py  ingestion.py  language.py  normalization.py  notes.py  qa.py  quiz.py  quiz_qc.py  reading.py  retrieval.py  reviews.py  sources.py  streaming.py  study.py  teaching.py  text_search.py  validation.py  vault.py
backend/app/core/: __init__.py  config.py  logging.py  tracing.py
backend/app/domain/: __init__.py  entities.py  ports.py
backend/app/eval/: __init__.py  ab.py  judge.py
backend/app/eval/prompts/: answerability.md  (+2 more)
backend/app/infrastructure/: __init__.py  clock.py
backend/app/worker/: __init__.py  celery_app.py  tasks.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_identity_schema.py  0002_sources_schema.py  0003_ingestion_schema.py  0004_corpus_schema.py  0005_retrieval_indexes.py  0006_teaching_schema.py  0007_language_aware_fts.py  0008_quiz_schema.py  0009_anchor_aliases.py  0010_notes_schema.py  0011_reader_progress.py  0012_card_provenance.py  0013_notes_retrieval.py  0014_note_cards.py  0015_study_days.py
backend/tests/: conftest.py  epub_builder.py  eval_labeled.py  eval_runner.py  fakes.py  fixtures_epub.py  golden_corpus.py  golden_expected.py  test_answering_anthropic.py  test_answering_factory.py  test_answering_local.py  test_application_cards.py  test_application_chunking.py  test_application_corpus.py  test_application_identity.py  test_application_ingestion.py  test_application_qa.py  test_application_quiz.py  test_application_reading.py  test_application_retrieval.py  test_application_reviews.py  test_application_sources.py  test_application_study.py  test_application_teaching.py  test_application_vault.py  test_backup_stack.py  test_compose_prod.py  test_compose_topology.py  test_config.py  test_deploy_topology.py  test_deploy_workflow.py  test_domain_identity.py  test_domain_ingestion.py  test_domain_quiz.py  test_domain_sources.py  test_embed_note.py  test_embeddings_factory.py  test_embeddings_local.py  test_embeddings_openai.py  test_eval_judge.py  (+67 more)
backend/tests/eval/: __init__.py  cases.yaml  harness.py  silver.py  test_ab.py  test_quiz_answerability.py  test_quiz_groundedness.py  test_replay_harness.py  test_silver.py  test_silver_hygiene.py  test_silver_loader.py  test_silver_resolution.py  test_silver_run.py
(+507 files in other folders)
