[project]
name = "learny-backend"
version = "0.2.0"
description = "Learny backend — FastAPI API for book intelligence (ADR-004)"
requires-python = ">=3.13"
license = "Apache-2.0"
dependencies = [
    "fastapi>=0.135,<0.200",
    "uvicorn[standard]>=0.34,<0.40",
    "pydantic>=2.10,<3",
    "pydantic-settings>=2.7,<3",
    "sqlalchemy>=2.0.36,<3",
    "psycopg[binary]>=3.2,<4",
    "alembic>=1.14,<2",
    "celery>=5.4,<6",
    "redis>=5.2,<6",
    "pwdlib[argon2]>=0.2,<1",
    "boto3>=1.35,<2",
    "python-multipart>=0.0.9",
    "ebooklib>=0.20",
    "beautifulsoup4>=4.15.0",
    "pgvector>=0.3,<0.5",
    "openai>=1.40,<2",
    "anthropic>=0.116,<1",
    "fsrs>=6,<7",
    "genanki>=0.13,<0.14",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.25,<1",
    "httpx>=0.28,<1",
    "ruff>=0.9,<1",
    "docling-core>=2.87,<3",
]
pdf = [
    # docling no longer bundles an OCR engine; EasyOCR is the selective-OCR
    # engine (ADR-0025) and shares torch/torchvision with docling's own chain.
    "docling>=2.112,<3",
    "easyocr>=1.7,<2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
addopts = "-ra"
markers = [
    "live: exercises a real external provider (skipped without credentials)",
    "eval: generation evaluation harness — live judge/smoke run nightly (skipped without credentials)",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
